@@ -15,6 +15,7 @@ package org.eclipse.syson.sysml.impl;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.notify.NotificationChain;
@@ -168,8 +169,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
     public void setIsImplied(boolean newIsImplied) {
         boolean oldIsImplied = this.isImplied;
         this.isImplied = newIsImplied;
-        if (this.eNotificationRequired())
+        if (this.eNotificationRequired()) {
             this.eNotify(new ENotificationImpl(this, Notification.SET, SysmlPackage.CONNECTOR__IS_IMPLIED, oldIsImplied, this.isImplied));
+        }
     }
 
     /**
@@ -192,8 +194,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
      */
     @Override
     public Element getOwningRelatedElement() {
-        if (this.eContainerFeatureID() != SysmlPackage.CONNECTOR__OWNING_RELATED_ELEMENT)
+        if (this.eContainerFeatureID() != SysmlPackage.CONNECTOR__OWNING_RELATED_ELEMENT) {
             return null;
+        }
         return (Element) this.eInternalContainer();
     }
 
@@ -215,18 +218,23 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
     @Override
     public void setOwningRelatedElement(Element newOwningRelatedElement) {
         if (newOwningRelatedElement != this.eInternalContainer() || (this.eContainerFeatureID() != SysmlPackage.CONNECTOR__OWNING_RELATED_ELEMENT && newOwningRelatedElement != null)) {
-            if (EcoreUtil.isAncestor(this, newOwningRelatedElement))
+            if (EcoreUtil.isAncestor(this, newOwningRelatedElement)) {
                 throw new IllegalArgumentException("Recursive containment not allowed for " + this.toString());
+            }
             NotificationChain msgs = null;
-            if (this.eInternalContainer() != null)
+            if (this.eInternalContainer() != null) {
                 msgs = this.eBasicRemoveFromContainer(msgs);
-            if (newOwningRelatedElement != null)
+            }
+            if (newOwningRelatedElement != null) {
                 msgs = ((InternalEObject) newOwningRelatedElement).eInverseAdd(this, SysmlPackage.ELEMENT__OWNED_RELATIONSHIP, Element.class, msgs);
+            }
             msgs = this.basicSetOwningRelatedElement(newOwningRelatedElement, msgs);
-            if (msgs != null)
+            if (msgs != null) {
                 msgs.dispatch();
-        } else if (this.eNotificationRequired())
+            }
+        } else if (this.eNotificationRequired()) {
             this.eNotify(new ENotificationImpl(this, Notification.SET, SysmlPackage.CONNECTOR__OWNING_RELATED_ELEMENT, newOwningRelatedElement, newOwningRelatedElement));
+        }
     }
 
     /**
@@ -313,8 +321,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
     public void setIsDirected(boolean newIsDirected) {
         boolean oldIsDirected = this.isDirected;
         this.isDirected = newIsDirected;
-        if (this.eNotificationRequired())
+        if (this.eNotificationRequired()) {
             this.eNotify(new ENotificationImpl(this, Notification.SET, SysmlPackage.CONNECTOR__IS_DIRECTED, oldIsDirected, this.isDirected));
+        }
     }
 
     /**
@@ -334,7 +343,7 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
     public EList<Feature> getRelatedFeature() {
         List<Feature> data = this.getConnectorEnd().stream()
                 .map(Feature::getOwnedReferenceSubsetting)
-                .filter(rs -> rs != null)
+                .filter(Objects::nonNull)
                 .map(ReferenceSubsetting::getSubsettedFeature)
                 .toList();
         return new EcoreEList.UnmodifiableEList<>(this, SysmlPackage.eINSTANCE.getConnector_RelatedFeature(), data.size(), data.toArray());
@@ -398,8 +407,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
             case SysmlPackage.CONNECTOR__OWNED_RELATED_ELEMENT:
                 return ((InternalEList<InternalEObject>) (InternalEList<?>) this.getOwnedRelatedElement()).basicAdd(otherEnd, msgs);
             case SysmlPackage.CONNECTOR__OWNING_RELATED_ELEMENT:
-                if (this.eInternalContainer() != null)
+                if (this.eInternalContainer() != null) {
                     msgs = this.eBasicRemoveFromContainer(msgs);
+                }
                 return this.basicSetOwningRelatedElement((Element) otherEnd, msgs);
         }
         return super.eInverseAdd(otherEnd, featureID, msgs);
@@ -464,8 +474,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
             case SysmlPackage.CONNECTOR__RELATED_FEATURE:
                 return this.getRelatedFeature();
             case SysmlPackage.CONNECTOR__SOURCE_FEATURE:
-                if (resolve)
+                if (resolve) {
                     return this.getSourceFeature();
+                }
                 return this.basicGetSourceFeature();
             case SysmlPackage.CONNECTOR__TARGET_FEATURE:
                 return this.getTargetFeature();
@@ -636,8 +647,9 @@ public class ConnectorImpl extends FeatureImpl implements Connector {
      */
     @Override
     public String toString() {
-        if (this.eIsProxy())
+        if (this.eIsProxy()) {
             return super.toString();
+        }
 
         StringBuilder result = new StringBuilder(super.toString());
         result.append(" (isImplied: ");
